k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vre-paas
  namespace: paas
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    meta.helm.sh/release-name: vre-paas
    meta.helm.sh/release-namespace: paas
    nginx.ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: 600m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/client-max-body-size: 600m
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
spec:
  tls:
    - hosts:
        - lfw-ds001-i022.lifewatch.dev
      secretName: lfw-ds001-i022.lifewatch.dev-tls
  rules:
    - host: lfw-ds001-i022.lifewatch.dev
      http:
        paths:
          - path: /vre-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vreapi-svc
                port:
                  number: 8000
          - path: /vreapp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vreapp-svc
                port:
                  number: 3000
